<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.example.ahmed.qusat.Fragments.Register">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/scroll"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/logo"
                android:id="@+id/logoQussat" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/logoQussat"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/firstname"
                android:id="@+id/E_firstName"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/E_firstName"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/lastname"
                android:id="@+id/E_lastName"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/E_lastName"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/email"
                android:id="@+id/E_Email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/E_Email"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/password"
                android:id="@+id/E_Password"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/E_Password"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/phone"
                android:id="@+id/E_Phone"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/E_Phone"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/ssn"
                android:id="@+id/E_ssn"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/E_ssn"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/address"
                android:id="@+id/E_Address"
                />

            <CheckBox
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/E_Address"
                android:layout_marginLeft="@dimen/_50sdp"
                android:id="@+id/maleCheckBox"
                android:text="@string/male"
                android:textColor="#a9b0c3"
                android:layout_marginTop="@dimen/_10sdp"
                />
            <CheckBox
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_below="@+id/E_Address"
                android:layout_toRightOf="@+id/maleCheckBox"
                android:id="@+id/femaleCheckBox"
                android:text="@string/female"
                android:textColor="#a9b0c3"

                />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@+id/femaleCheckBox"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bc_buttons"
                    android:text="@string/signup"
                    android:textColor="#044bff"
                    android:id="@+id/btn_signin"
                    android:textStyle="bold"
                    />

            </RelativeLayout>
        </LinearLayout>


</ScrollView>
