<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.example.ahmed.qusat.Fragments.Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/logo"
        android:id="@+id/logoQussat"
        />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="@dimen/_40sdp"
          android:layout_below="@+id/logoQussat"
          android:layout_marginTop="@dimen/_30sdp"
          android:layout_marginLeft="@dimen/_30sdp"
          android:layout_marginRight="@dimen/_30sdp"
          android:text="@string/email"
          android:id="@+id/E_Email"
          />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/E_Email"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:text="@string/password"
            android:id="@+id/E_Password"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/E_Password"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_60sdp"
            android:background="@drawable/bc_buttons"
            android:text="@string/signin"
            android:textColor="#044bff"
            android:id="@+id/btn_signin"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/create"
            android:textSize="@dimen/_15sdp"

            />

    </RelativeLayout>
</FrameLayout>
