<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    >

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:text="@string/profileName"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"
        android:id="@+id/profile_name"
        />

    <TextView
        android:id="@+id/profile_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:textSize="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"
        android:layout_marginRight="@dimen/_20sdp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_text_name"
        android:text="@string/gender"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"
        android:id="@+id/profile_gender"
        />

    <TextView
        android:id="@+id/profile_text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_alignTop="@+id/profile_gender"
        android:textColor="#000"
        android:textSize="@dimen/_15sdp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_250sdp"
        android:background="#b6b3b0"
        android:id="@+id/profile_view1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_view1"
        android:text="@string/phone"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"
        android:id="@+id/profile_phone"
        />
    <TextView
        android:id="@+id/profile_text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_alignTop="@+id/profile_phone"

        android:textColor="#000"
        android:textSize="@dimen/_15sdp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_295sdp"
        android:background="#b6b3b0"
        android:id="@+id/profile_view2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_view1"
        android:text="@string/remaining"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"
        android:id="@+id/profile_remaining"
        />
    <TextView
        android:id="@+id/profile_text_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_alignTop="@+id/profile_remaining"

        android:textColor="#000"
        android:textSize="@dimen/_15sdp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_335sdp"
        android:background="#b6b3b0"
        android:id="@+id/profile_view3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_view1"
        android:text="@string/statuscolor"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"
        android:id="@+id/profile_color"
        />
    <RelativeLayout
        android:id="@+id/profile_status_colors"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_alignTop="@+id/profile_color"
        android:background="@drawable/button"
        android:visibility="gone"
         />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_380sdp"
        android:background="#b6b3b0"
        android:id="@+id/profile_view4"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_390sdp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myorders"
            android:textColor="#000"
            android:layout_alignParentLeft="@+id/profile_view"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/profile_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View"
            android:textColor="#120c8f"
            android:textSize="@dimen/_15sdp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
         android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/myorders"
         android:textSize="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_135sdp"
         android:layout_marginLeft="@dimen/_20sdp"
         android:textColor="#000"
         android:id="@+id/profile_my_orders"
         />
     <TextView
         android:id="@+id/profile_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/_20sdp"
         android:layout_alignTop="@+id/profile_my_orders"
         android:text="View"
         android:textColor="#0917af"
         android:textSize="@dimen/_15sdp" />
     </LinearLayout>-->


</RelativeLayout>